# hello_cmake

./: README.md
environment/scripts/: build_hello_cmake.sh
environment/templates/cmake/: global_settings.cmake
greeter/: CMakeLists.txt
greeter/sources/: CMakeLists.txt
greeter/sources/greeter/: CMakeLists.txt  greeter.h  main.cc
greeter/sources/greeter/tests/: CMakeLists.txt  greeter_test.cc
world/: CMakeLists.txt
world/sources/: CMakeLists.txt
world/sources/world/: CMakeLists.txt  config.h  turn.cc  world.cc  world.h  world_extension.cc
world/sources/world/tests/: CMakeLists.txt  world_test.cc
