CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7)
PROJECT(WORLD)
INCLUDE(global_settings)

SET(Boost_USE_STATIC_LIBS OFF)
FIND_PACKAGE(Boost
    COMPONENTS chrono python system unit_test_framework timer
    REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)

INCLUDE_DIRECTORIES(
    ${PYTHON_INCLUDE_DIRS}
    ${Boost_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}/sources
)

ADD_SUBDIRECTORY(sources)
